Added project descriptions on hover

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
 				              <img src="assets/images/3.jpg" alt="image" class="img-responsive" />
 			                <div class="portfolio-overlay">
       									<div class="overlay-items">
-                          <h2>Brand Identity Re-design</h2>
+                          <h2>MedScan</h2>
       										<p>
-      											Client: DRI Ltd
+      											A block-chain based sophisticated mechanism to detect fake medicines
       										</p>
       									</div>
 					            </div>
@@ -179,9 +179,9 @@
 				              <img src="assets/images/5.jpg" alt="image" class="img-responsive" />
 			                <div class="portfolio-overlay">
       									<div class="overlay-items">
-                          <h2>Brand Identity Re-design</h2>
+                          <h2>Automated Intersection Management</h2>
       										<p>
-      											Client: Meso Park
+      											Using AI
       										</p>
       									</div>
 					            </div>
@@ -197,9 +197,9 @@
                       <img src="assets/images/7.jpg" alt="image" class="img-responsive" />
                       <div class="portfolio-overlay">
                         <div class="overlay-items">
-                          <h2>Brand Identity Re-design</h2>
+                          <h2>DocAid</h2>
                           <p>
-                            Client: Destiny Agency
+                            E-prescription management application
                           </p>
                         </div>
                       </div>
@@ -215,9 +215,9 @@
                       <img src="assets/images/4.jpg" alt="image" class="img-responsive" />
                       <div class="portfolio-overlay">
                         <div class="overlay-items">
-                          <h2>Brand Identity Re-design</h2>
+                          <h2>StructGAN</h2>
                           <p>
-                            Client: Aria Corp
+                            Undergraduate Thesis
                           </p>
                         </div>
                       </div>
@@ -239,7 +239,7 @@
           <div class="container">
             <div class="inner">
               <h1 class="wow fadeInUp" data-wow-delay= ".2s">When it comes to working with me, its not just about details, <br class="visible-lg"> perfection and result.
-                  Its also about you, your ideas, <br class="visible-lg"> my planning and a little fun.
+  <br class="visible-lg"> my planning and a little fun.
               </h1>
               <img class="wow fadeInUp" data-wow-delay= ".3s" src="assets/images/signature.png" alt="Signature" />
             </div>
