--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Reco Personal Onepage Template</title>
+    <title>Projects - Kazi</title>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
@@ -25,7 +25,7 @@
             </div>
           </div>
         </div>
-        <a class="logo hidden-xs" href="index.html">John &nbspConnor</a>
+        <a class="logo hidden-xs" href="index.html">Kazi's projects</a>
         <a class="logo back-btn visible-xs" href="index.html"><i class="ion-android-home"></i></a>
       </div>
       <div class="menu">
