Updated skills section

--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
                 <h1>"With great power comes great responsibility, but the contrary <br class="visible-lg"> was never true"</h1>
                 <h4>Experience & Skills</h4>
                 <ul>
-                  <li>Wed Design,</li>
-                  <li>Web Development,</li>
-                  <li>Product Design,</li>
-                  <li>Social Engineering</li>
-                  <li>Advertising,</li>
-                  <li>Playing Hard</li>
+                  <li><strong>Languages:</strong> Python, JavaScript, C, C++, C#, MATLAB<br></li>
+                  <li>Frameworks: TensorFlow, Selenium, Pytorch, TFLite<br></li>
+                  <li>Web: Django, NodeJS, ExpressJS, NestJS<br></li>
+                  <li>Others: Latex, MS Office, Unity</li>
                 </ul>
-              </div>
+              </div>  
               <div class="awards">
                 <h4>Awards & Recognition</h4>
                 <ul>
