Updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,6 @@
   <body>
     <div id="loading"></div>
     <div class="wrapper">
-      <a class="back-home hidden-xs" href="index.html"><i class="ion-android-home"></i></a>
       <div id="side-menu">
         <div class="menu-container">
           <div class="nav-trigger" role="button" title="sweet hamburger">
@@ -25,8 +24,8 @@
             </div>
           </div>
         </div>
-        <a class="logo hidden-xs" href="index.html">Kazi's projects</a>
-        <a class="logo back-btn visible-xs" href="index.html"><i class="ion-android-home"></i></a>
+        <a class="logo hidden-xs" href="index.html"> <-----  &nbsp&nbsp&nbsp&nbsp   Click here</a>
+        <a class="logo text visible-xs" href="index.html">JC</a>
       </div>
       <div class="menu">
         <div class="menu-inner">
@@ -36,30 +35,31 @@
                 <h1>"With great power comes great responsibility, but the contrary <br class="visible-lg"> was never true"</h1>
                 <h4>Experience & Skills</h4>
                 <ul>
-                  <li>Wed Design,</li>
-                  <li>Web Development,</li>
-                  <li>Product Design,</li>
-                  <li>Social Engineering</li>
-                  <li>Advertising,</li>
-                  <li>Playing Hard</li>
+                  <li><strong>Languages:</strong> Python, JavaScript, C, C++, C#, MATLAB<br></li>
+                  <li>Frameworks: TensorFlow, Selenium, Pytorch, TFLite<br></li>
+                  <li>Web: Django, NodeJS, ExpressJS, NestJS<br></li>
+                  <li>Others: Latex, MS Office, Unity</li>
                 </ul>
-              </div>
+              </div>  
               <div class="awards">
                 <h4>Awards & Recognition</h4>
                 <ul>
-                  <li><a href="#">DOTY 2016</a></li>
-                  <li><a href="#">Awwwards SOTM</a></li>
-                  <li><a href="#">Campaign of 2016 Adage</a></li>
-                  <li><a href="#">Kaline People Choice 2015</a></li>
-                  <li><a href="#">WDA Hon'ble Mention</a></li>
+                  <li><a href="#">Full scholarship International SBCC Summit, 2020 (Morocco)</a></li>
+                  <li><a href="#">Recognition in National Adolescent Health Conference, 2020</a></li>
+                  <li><a href="#">‘The Daily Star’ Certificate of Excellence, 2016</a></li>
+                  <li><a href="#">‘The Daily Star’ Certificate of Excellence, 2014</a></li>
+                  <li><a href="#">Champion of Intra-IUT Mobile App Development Contest</a></li>
+                  <li><a href="#">Champion of ICT4D at 4th AUW ICT Fest, 2018</a></li>
+                  <li><a href="#">Champion of PDF Summer Challenge, 2015</a></li>
+                  <li><a href="#">Runner-up of App Development Contest, IUT ICT Fest, 2019</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about">
                 <h6>about me</h6>
-                <h1>John <br> Connor</h1>
-                <h4>Creative Designer/Director</h4>
+                <h1>Kazi <br> Raiyan <br> Mahmud</h1>
+                <h4>Software Engineer</h4>
                 <p>
                   I guess a lot of text should go in here because people badly want to know about a guy who has a
                   kick-ass website they never seen. So, I would type some text that makes sense and the rest will
@@ -82,15 +82,15 @@
                   <div class="col-md-6 col-xs-4 nopadding">
                     <div class="social">
                       <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Behance</a></li>
+                        <li><a href="https://github.com/kazzi58">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/kazi-raiyan-b484a118a/">LinkedIn</a></li>
+                        <li><a href="https://www.facebook.com/raiyan.mahmud.71271">Facebook</a></li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-md-6 col-xs-8 ">
                     <div class="address">
-                      <h2>John Connor, S-25  <br class="hidden-xs"> Greater Noida, New Delhi</h2>
+                      <h2>Kazi Raiyan Mahmud <br class="hidden-xs"> Dhaka, Bangladesh</h2>
                     </div>
                   </div>
                 </div>
@@ -104,10 +104,10 @@
         <div class="portfolio portfolio-page">
           <div class="container">
             <div class="portfolio-intro">
-              <h1 class="wow fadeInUp" data-wow-delay= ".1s">Connor's Portfolio</h1>
-              <p class="wow fadeInUp" data-wow-delay= ".1s">
+              <h1 class="wow fadeInUp" data-wow-delay= ".1s">Kazi's Portfolio</h1>
+<!--               <p class="wow fadeInUp" data-wow-delay= ".1s">
                 Entire collection of my best works which ofcourse <br class="hidden-xs"> won some awards and some hearts.
-              </p>
+              </p> -->
             </div>
             <div class="portfolio-grid">
 
@@ -227,22 +227,22 @@
           <div class="container">
             <div class="cta text-center">
               <h1 class="wow fadeInUp" data-wow-delay= ".1s">Let's get to work <span>!</span></h1>
-                <a class="wow fadeInUp" data-wow-delay= ".2s" href="mailto:contact@domain.com">letswork@johnconnor.me</a>
+                <a class="wow fadeInUp" data-wow-delay= ".2s" href="mailto:contact@domain.com">raiyan.mahmud@gmail.com</a>
                 <br>
-                <a class="wow fadeInUp" data-wow-delay= ".3s" href="tel:+1234567890">+9123456789</a>
+                <a class="wow fadeInUp" data-wow-delay= ".3s" href="tel:+1234567890">+8801611236644</a>
             </div>
             <div class="col-md-6 col-xs-4 nopadding">
               <div class="social">
                 <ul>
-                  <li><a href="#">Facebook</a></li>
-                  <li><a href="#">Twitter</a></li>
-                  <li><a href="#">Behance</a></li>
+                  <li><a href="https://github.com/kazzi58">Github</a></li>
+                  <li><a href="https://www.linkedin.com/in/kazi-raiyan-b484a118a/">LinkedIn</a></li>
+                  <li><a href="https://www.facebook.com/raiyan.mahmud.71271">Facebook</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-md-6 col-xs-8 ">
               <div class="address">
-                <h2>John Connor, S-25  <br class="hidden-xs"> Greater Noida, New Delhi</h2>
+                <h2>Kazi Raiyan Mahmud  <br class="hidden-xs"> Dhaka, Bangladesh</h2>
               </div>
             </div>
           </div>
