Updated about me paragarph

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
                 <h1>Kazi <br> Raiyan <br> Mahmud</h1>
                 <h4>Software Engineer</h4>
                 <p>
-                  I guess a lot of text should go in here because people badly want to know about a guy who has a
-                  kick-ass website they never seen. So, I would type some text that makes sense and the rest will
-                  be just plain crap. Again if you are irritated with this kind of bull crap please forgive this
-                  poor soul because he's ain't a writer. Just a guy like you who should get his job done.
+                                  Coming from a family of doctors, there has been the age-long hidden expectation that I would follow the trail of the same career path. However, my interest and intrigue has always lain among computers and technology. I am a CS graduate from the Islamic University of Technology (IUT), Bangladesh. I love to coding and inventing new solutions to challenging problems. Beyond my 9-5, I love to capture photographs through my lens! 
                 </p>
                 <p>
                   Just like some tiny souls out there, I sometimes explode and conquer the world.
