Added link to photographs

--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
                 <h1>Kazi <br> Raiyan <br> Mahmud</h1>
                 <h4>Software Engineer</h4>
                 <p>
-                                  Coming from a family of doctors, there has been the age-long hidden expectation that I would follow the trail of the same career path. However, my interest and intrigue has always lain among computers and technology. I am a CS graduate from the Islamic University of Technology (IUT), Bangladesh. I love to coding and inventing new solutions to challenging problems. Beyond my 9-5, I love to capture photographs through my lens! 
-                </p>
-                <p>
-                  Just like some tiny souls out there, I sometimes explode and conquer the world.
-                  Like, in dreams and fantasies. No, there's no humor in it.
+                                  Coming from a family of doctors, there has been the age-long hidden expectation that I would follow the trail of the same career path. However, my interest and intrigue has always lain among computers and technology. I am a CS graduate from the Islamic University of Technology (IUT), Bangladesh. I love to coding and inventing new solutions to challenging problems. Beyond my 9-5, I love to capture photographs through my lens! <a href="https://www.instagram.com/_kzzii/">Link to some random captures</a>
                 </p>
                 <p>
                   I don't mind if you love to know more about me, I mean just <br class="hidden-xs"> Socially on <a href="#">Twitter</a> and <a href="#">Facebook</a>.
