--- a/photography.html
+++ b/photography.html
@@ -1,101 +1,258 @@
-<div class="app">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Kazi's gallery</title>
+  <meta name="description" content="JPhotography - Minimal Photography Portfolio HTML5 Template">
 
-  <div class="cardList">
-    <button class="cardList__btn btn btn--left">
-      <div class="icon">
-        <svg>
-          <use xlink:href="#arrow-left"></use>
-        </svg>
+  <!-- Playfair Display - Raleway Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Raleway:100,300,400,600,700" rel="stylesheet">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="./css/photography.css">
+  <link rel="stylesheet" type="text/css" href="./css/dark-theme.css">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+<body>
+<header>
+  <div class="sign">
+    <img id="signImg" src="./img/about/sign-kazi.png"/>
+  </div>
+</header>
+
+<!-- Corner Borders -->
+<section class="borders">
+  <div class="brTR">
+  </div>
+  <div class="brTL">
+  </div>
+  <div class="brBL">
+  </div>
+  <div class="brBR">
+  </div>
+</section>
+
+<section class="gallery">
+  <div class="container-fluid">
+    <div class="row">
+      <!-- Mixit Up Controls -->
+      <div class="controls">
+        <button type="button" class="control" data-filter="all">All</button>
+        <button type="button" class="control" data-filter=".bnw">B&W</button>
+        <button type="button" class="control" data-filter=".colors">Colors</button>
+        <button type="button" class="control" data-filter=".stories">Stories</button>
       </div>
-    </button>
+    </div>
 
-    <div class="cards__wrapper">
-      <div class="card current--card">
-        <div class="card__image">
-          <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+    <div class="row">
+      <div class="fw mix-container home-gallery">
+        <div class="mix bnw">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Someday, I'll fly</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/5.jpg" alt=""/>
+            </div>
+          </a>
         </div>
-      </div>
-
-      <div class="card next--card">
-        <div class="card__image">
-          <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+        <div class="mix bnw">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Devotion</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/4.jpg" alt=""/>
+            </div>
+          </a>
         </div>
-      </div>
-
-      <div class="card previous--card">
-        <div class="card__image">
-          <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+        <div class="mix bnw">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Smells like freedom</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/3.jpg" alt=""/>
+            </div>
+          </a>
         </div>
-      </div>
-    </div>
+        <div class="mix bnw stories  ">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Left and right</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/2.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+        <div class="mix bnw">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>The wait</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/1.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
 
-    <button class="cardList__btn btn btn--right">
-      <div class="icon">
-        <svg>
-          <use xlink:href="#arrow-right"></use>
-        </svg>
+        <div class="mix bnw">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Just another day at the office</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/6.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+        <div class="mix colors">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>The other side</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/7.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+        <div class="mix colors stories">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Gossips</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/8.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+        <div class="mix colors">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Light at the end of the tunnel</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/9.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+        <div class="mix bnw stories">
+          <a href="" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Life goes on</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/10.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+        <div class="mix colors">
+          <a href="project-slider.html" class="thumb-a">
+            <div class="item-hover">
+              <div class="hover-text"><h3>Dusk</h3></div>
+            </div>
+            <div class="item-img">
+              <img src="./img/photography/11.jpg" alt=""/>
+            </div>
+          </a>
+        </div>
+<!--        <div class="mix landscape portrait">-->
+<!--          <a href="project-video.html" class="thumb-a">-->
+<!--            <div class="item-hover">-->
+<!--              <div class="hover-text"><h3>Girl Portrait B/W</h3></div>-->
+<!--            </div>-->
+<!--            <div class="item-img">-->
+<!--              <img src="./img/photography/12.jpg" alt=""/>-->
+<!--            </div>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--        <div class="mix portrait product">-->
+<!--          <a href="project-1.html" class="thumb-a">-->
+<!--            <div class="item-hover">-->
+<!--              <div class="hover-text"><h3>Retro Photographer</h3></div>-->
+<!--            </div>-->
+<!--            <div class="item-img">-->
+<!--              <img src="./img/photography/13.jpg" alt=""/>-->
+<!--            </div>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--        <div class="mix landscape product portrait">-->
+<!--          <a href="project-slider.html" class="thumb-a">-->
+<!--            <div class="item-hover">-->
+<!--              <div class="hover-text"><h3>Spiral View</h3></div>-->
+<!--            </div>-->
+<!--            <div class="item-img">-->
+<!--              <img src="./img/photography/14.jpg" alt=""/>-->
+<!--            </div>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--        <div class="mix landscape">-->
+<!--          <a href="project-video.html" class="thumb-a">-->
+<!--            <div class="item-hover">-->
+<!--              <div class="hover-text"><h3>Happy Clouds</h3></div>-->
+<!--            </div>-->
+<!--            <div class="item-img">-->
+<!--              <img src="./img/photography/15.jpg" alt=""/>-->
+<!--            </div>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--        <div class="mix portrait">-->
+<!--          <a href="project-1.html" class="thumb-a">-->
+<!--            <div class="item-hover">-->
+<!--              <div class="hover-text"><h3>Photographer Phose</h3></div>-->
+<!--            </div>-->
+<!--            <div class="item-img">-->
+<!--              <img src="./img/photography/16.jpg" alt=""/>-->
+<!--            </div>-->
+<!--          </a>-->
+<!--        </div>-->
       </div>
-    </button>
+
+    </div>
   </div>
 
-  <div class="infoList">
-    <div class="info__wrapper">
-      <div class="info current--info">
-        <h1 class="text name">Highlands</h1>
-        <h4 class="text location">Scotland</h4>
-        <p class="text description">The mountains are calling</p>
-      </div>
+</section>
 
-      <div class="info next--info">
-        <h1 class="text name">Machu Pichu</h1>
-        <h4 class="text location">Peru</h4>
-        <p class="text description">Adventure is never far away</p>
-      </div>
-
-      <div class="info previous--info">
-        <h1 class="text name">Chamonix</h1>
-        <h4 class="text location">France</h4>
-        <p class="text description">Let your dreams come true</p>
+<footer>
+  <div class="container-fluid">
+    <div class="footer-info">
+      <div class="footer-title">
+<!--        <h2>JPhotography</h2>-->
+        <p>&copy; Copyrights 2022. All Rights Reserved.</p>
       </div>
     </div>
   </div>
+</footer>
 
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script src="./js/mixitup.min.js"></script>
+<script src="./js/custom.js"></script>
+<script>
+  var containerEl = document.querySelector('.mix-container');
 
-  <div class="app__bg">
-    <div class="app__bg__image current--image">
-      <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
-    </div>
-    <div class="app__bg__image next--image">
-      <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
-    </div>
-    <div class="app__bg__image previous--image">
-      <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
-    </div>
-  </div>
-</div>
-
-<div class="loading__wrapper">
-  <div class="loader--text">Loading...</div>
-  <div class="loader">
-    <span></span>
-  </div>
-</div>
-
-
-<svg class="icons" style="display: none;">
-  <symbol id="arrow-left" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
-    <polyline points='328 112 184 256 328 400'
-              style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
-  </symbol>
-  <symbol id="arrow-right" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
-    <polyline points='184 112 328 256 184 400'
-              style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
-  </symbol>
-</svg>
-
-
-
-<div class="support">
-  <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
-  <a href="https://dribbble.com/devloop01" target="_blank"><i class="fab fa-dribbble"></i></a>
-</div>
+  var mixer = mixitup(containerEl, {
+    animation: {
+      effects: 'fade scale stagger(50ms)' // Set a 'stagger' effect for the loading animation
+    }
+  });
+</script>
+</body>
+</html>
