Change caption of a photo

--- a/photography.html
+++ b/photography.html
@@ -114,7 +114,7 @@
         <div class="mix bnw">
           <a href="" class="thumb-a">
             <div class="item-hover">
-              <div class="hover-text"><h3>Just another day at the office</h3></div>
+              <div class="hover-text"><h3>Hanging in there</h3></div>
             </div>
             <div class="item-img">
               <img src="./img/photography/6.jpg" alt=""/>
