--- a/index.html
+++ b/index.html
@@ -76,17 +76,22 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#news">Research</a></li>
                         <li><a href="#portfolio">Achievements</a></li>
-                        <li><a href="#service">Photography</a></li>
+                        <li><a href="./photography.html">Photography</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="social">
                     <ul>
-                        <li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt=""/></a></li>
-                        <li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt=""/></a></li>
-                        <li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt=""/></a></li>
-                        <li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt=""/></a></li>
-                        <li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt=""/></a></li>
+                        <li><a href="https://scholar.google.com/citations?hl=en&user=xWl-wDcAAAAJ"><img class="svg"
+                                                                                                        src="img/social/scholar.png"
+                                                                                                        alt=""/></a>
+                        </li>
+                        <li><a href="https://www.linkedin.com/in/kazi-raiyan-b484a118a/"><img class="svg"
+                                                                                              src="img/social/linkedin.png"
+                                                                                              alt=""/></a>
+                        </li>
+                        <li><a href="https://github.com/kazzi58"><img class="svg" src="img/social/github.png"
+                                                                      alt=""/></a></li>
                     </ul>
                 </div>
                 <div class="copyright">
