Remove broken links

--- a/photography.html
+++ b/photography.html
@@ -162,7 +162,7 @@
           </a>
         </div>
         <div class="mix colors">
-          <a href="project-slider.html" class="thumb-a">
+          <a href="" class="thumb-a">
             <div class="item-hover">
               <div class="hover-text"><h3>Dusk</h3></div>
             </div>
