Add new achievement

--- a/index.html
+++ b/index.html
@@ -139,12 +139,11 @@
                         <h3 class="name">Kazi Raiyan Mahmud</h3>
                         <span class="line"></span>
                         <h3 class="job">
-								<span class="cd-headline loading-bar"> <!-- ANIMATE TEXT VALUES: zoom, rotate-1, letters type, letters rotate-2, loading-bar, slide, clip, letters rotate-3, letters scale, push,  -->
-                                    <!--									<span class="blc">Software</span>-->
+								<span class="cd-headline loading-bar">
 									<span class="cd-words-wrapper">
 									  <b class="is-visible">Software Engineer</b>
-									  <b>CS grad from IUT</b>
-									  <b>Photographer</b>
+									  <b>Researcher</b>
+									  <b>Social Technologist</b>
 									</span>
 								</span>
                         </h3>
@@ -178,7 +177,8 @@
                                     <p>I'm currently working in <strong>Robi Axiata Ltd.</strong> as a Software
                                         Engineer. My job there is to build sophisticated multi-layered web applications
                                         with users all around the globe.</p>
-                                    <p>I also love to code beyond my professional sphere. I like working with novel
+
+                                    <p id="secondIntroPara">I also love to code beyond my professional sphere. I like working with novel
                                         ideas focusing on solving challenging problems. From my previous involvements, I
                                         take myself to be an efficient team player, trying my best to complete any
                                         assigned work with utmost dedication within the given deadline.</p>
@@ -1034,16 +1034,6 @@
                         <div class="cavani_tm_title">
                             <span>Achievements</span>
                         </div>
-                        <!--                        <div class="portfolio_filter">-->
-                        <!--                            <ul>-->
-                        <!--                                <li><a href="#" class="current" data-filter="*">All</a></li>-->
-                        <!--                                <li><a href="#" data-filter=".vimeo">Vimeo</a></li>-->
-                        <!--                                <li><a href="#" data-filter=".youtube">Youtube</a></li>-->
-                        <!--                                <li><a href="#" data-filter=".soundcloud">Soundcloud</a></li>-->
-                        <!--                                <li><a href="#" data-filter=".image">Image</a></li>-->
-                        <!--                                <li><a href="#" data-filter=".detail">Detail</a></li>-->
-                        <!--                            </ul>-->
-                        <!--                        </div>-->
                         <div class="achievementsList">
                             <ul>
                                 <li class="listItems">Selected as the <strong>Youth Champion </strong> after the
@@ -1056,6 +1046,7 @@
                                 <li class="listItems">Champion of the Inclusive business award competition (2020),
                                     awarded by <strong> SNV Bangladesh </strong> and <strong> The Embassy of
                                         Netherlands </strong></li>
+                                <li class="listItems">Awarded <strong>Distinction (Honors) </strong> by the department of CSE for academic excellence during the Bachelor of Science in IUT</strong></li>
                                 <li class="listItems">Recognition in <strong>National Adolescent Health Conference,
                                     2020 </strong> for
                                     building the first ever Bengali mobile application to raise awareness regarding
