Change profile image

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- MAINPART -->
     <div class="cavani_tm_mainpart">
         <div class="author_image">
-            <div class="main" data-img-url="img/about/kazi_final.png"></div>
+            <div class="main" data-img-url="img/about/kazi_art.png"></div>
             <div class="particle_wrapper">
                 <div id="particles-js"></div>
             </div>
