--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="gameContainer">
+                        <!--<div class="gameContainer">
                             <form>
                                 <input type="radio" id="rock-rock" name="rock-paper-scissors">
                                 <input type="radio" id="rock-paper" name="rock-paper-scissors">
@@ -805,7 +805,7 @@
                                 </div>
 
                             </form>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
