Make copyright year dynamic

--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 <!-- FOOTER -->
 <div class="cavani_tm_footer">
     <div class="copyright">
-        <p>Copyright &copy; 2022</p>
+        <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script></p>
     </div>
     <div class="social">
         <ul>
