--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#news">Research</a></li>
                         <li><a href="#portfolio">Achievements</a></li>
-                        <li><a href="./treemap.html">Photography</a></li>
+                        <li><a href="./photography.html">Photography</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
