--- a/safegen.html
+++ b/safegen.html
@@ -75,7 +75,7 @@
             <li>Copy the generated token.</li>
         </ol>
 
-        <h2>Step 3: Configure the SafeGen Extension</h2>
+        <h2>Step 3: Configure the SafeGen Extension in Chrome</h2>
         <p>Now that the extension is installed and you have a GitHub token, follow these steps:</p>
         <ol>
             <li>In Chrome, go to the <strong>Extensions</strong> menu and <strong>pin</strong> the SafeGen extension for easy access.</li>
@@ -84,9 +84,21 @@
             <li>Click <strong>Save</strong>.</li>
         </ol>
 
-        <h2>Step 4: Proceed to Task Testing</h2>
+        <h2>Step 4: Setting Up SafeGen on Microsoft Edge</h2>
+        <p>If you want to use SafeGen on Microsoft Edge as well, follow these steps:</p>
+        <ol>
+            <li>Open Edge and go to <strong>edge://extensions</strong> in the address bar.</li>
+            <li>Enable <strong>Developer mode</strong> by toggling the switch in the top-right corner.</li>
+            <li>Click <strong>Load unpacked</strong> and select the same folder where you unzipped the SafeGen extension.</li>
+            <li>Once the extension is loaded, click the SafeGen icon in Edge's toolbar to open it.</li>
+            <li>Paste the same GitHub token you used in Chrome.</li>
+            <li>Click <strong>Save</strong> to sync your extension in Edge.</li>
+            <li>Now you can use SafeGen across both browsers with the same token!</li>
+        </ol>
+
+        <h2>Step 5: Proceed to Task Testing</h2>
         <p>To begin the tasks and proceed further with testing, click the link below:</p>
-        <p><a href="your-task-link-here" target="_blank">Proceed with Testing</a></p>
+        <p><a href="https://kazzi58.github.io/safegen-tasks.html" target="_blank">Proceed with Testing</a></p>
     </div>
 </body>
 </html>
