--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                         <h3 class="name">Kazi Raiyan Mahmud</h3>
                         <span class="line"></span>
                         <h3 class="job">
-								<span class="cd-headline loading-bar">
-									<span class="cd-words-wrapper">
-									  <b class="is-visible">Software Engineer</b>
-									  <b>Researcher</b>
-									  <b>Social Technologist</b>
-									</span>
-								</span>
+                                <span class="cd-headline loading-bar">
+                                    <span class="cd-words-wrapper">
+                                      <b class="is-visible">Software Engineer</b>
+                                      <b>Cybersecurity enthusiast</b>
+                                      <b>Researcher</b>
+                                    </span>
+                                </span>
                         </h3>
                         <div class="cavani_tm_button transition_link">
                             <a href="#contact">Get in Touch</a>
@@ -166,22 +166,16 @@
                             <div class="wrapper">
                                 <div class="left">
                                     <p>Hello there! My name is <strong>Kazi Raiyan Mahmud.</strong> I am a Computer
-                                        Science graduate from the department of Computer Science and Engineering,
-                                        Islamic University of Technology (IUT).</p>
+                                        Science graduate with an MSc in Cyber Physical Systems (Cyber Security Pathway) from the University of Nottingham.</p>
                                     <p>With a professional career of 3 years, I feel content with my journey so
                                         far. My innate passion for engineering has urged me to pursue a variety of work,
-                                        among which research
+                                        among which creating solutions to day-to-day problems
                                         has given me the most joy.</p>
                                 </div>
                                 <div class="right">
-                                    <p>I'm currently working in <strong>Robi Axiata Ltd.</strong> as a Software
-                                        Engineer. My job there is to build sophisticated multi-layered web applications
-                                        with users all around the globe.</p>
+                                    <p>I am currently leading the development of the National Cancer Registry (NCR) in Bangladesh, while also having led award-winning applications and game projects in the health-tech domain. These projects focus on improving healthcare accessibility and innovation.</p>
 
-                                    <p id="secondIntroPara">I also love to code beyond my professional sphere. I like working with novel
-                                        ideas focusing on solving challenging problems. From my previous involvements, I
-                                        take myself to be an efficient team player, trying my best to complete any
-                                        assigned work with utmost dedication within the given deadline.</p>
+                                    <p id="secondIntroPara">Building on a strong theoretical foundation from my MSc, I am now deepening my practical knowledge in cybersecurity through penetration testing and designing secure system architectures. My focus is on real-world applications that ensure robust and reliable security solutions.</p>
                                 </div>
                             </div>
                         </div>
@@ -377,11 +371,22 @@
                                                 <li>
                                                     <div class="list_inner">
                                                         <div class="time">
+                                                            <span>2023 - 2024</span>
+                                                        </div>
+                                                        <div class="place">
+                                                            <h3>University of Nottingham</h3>
+                                                            <span>MSc in Cyber Physical Systems</span>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="list_inner">
+                                                        <div class="time">
                                                             <span>2017 - 2021</span>
                                                         </div>
                                                         <div class="place">
                                                             <h3>Islamic University of Technology (IUT)</h3>
-                                                            <span>Bachelor of Science</span>
+                                                            <span>BSc in Computer Science and Engineering</span>
                                                         </div>
                                                     </div>
                                                 </li>
@@ -421,7 +426,7 @@
                                                 <li>
                                                     <div class="list_inner">
                                                         <div class="time">
-                                                            <span>2022 - present</span>
+                                                            <span>2022 - 2023</span>
                                                         </div>
                                                         <div class="place">
                                                             <h3>Robi Axiata Ltd.</h3>
