--- a/index.html
+++ b/index.html
@@ -687,6 +687,8 @@
                         </div>
                         <div class="achievementsList">
                             <ul>
+                                <li class="listItems"><strong>Excellence in Computer Science Scholarship</strong> awardee from the University of Nottingham
+                                </li>
                                 <li class="listItems">Selected as the <strong>Youth Champion </strong> after the
                                     acceptance of a research work
                                     related to health
