Update contact details

--- a/index.html
+++ b/index.html
@@ -734,19 +734,19 @@
                                 <li>
                                     <div class="list_inner">
                                         <img class="svg" src="img/svg/location.svg" alt=""/>
-                                        <span>Dhaka, Bangladesh</span>
+                                        <span>United Kingdom</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="list_inner">
                                         <img class="svg" src="img/svg/mail.svg" alt=""/>
-                                        <span><a href="#">kaziraiyan@iut-dhaka.edu</a></span>
+                                        <span><a href="#">raiyan.mahmud@gmail.com</a></span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="list_inner">
-                                        <img class="svg" src="img/svg/call.svg" alt=""/>
-                                        <span>+880 1611 23 66 44</span>
+                                        <img class="svg" src="img/social/linkedin.png" alt=""/>
+                                        <span>https://www.linkedin.com/in/kazzi58/</span>
                                     </div>
                                 </li>
                             </ul>
@@ -834,7 +834,7 @@
             <li><a href="https://scholar.google.com/citations?hl=en&user=xWl-wDcAAAAJ"><img class="svg"
                                                                                             src="img/social/scholar.png"
                                                                                             alt=""/></a></li>
-            <li><a href="https://www.linkedin.com/in/kazi-raiyan-b484a118a/"><img class="svg"
+            <li><a href="https://www.linkedin.com/in/kazzi58"><img class="svg"
                                                                                   src="img/social/linkedin.png" alt=""/></a>
             </li>
             <li><a href="https://github.com/kazzi58"><img class="svg" src="img/social/github.png" alt=""/></a></li>
