Update research section

--- a/index.html
+++ b/index.html
@@ -553,6 +553,30 @@
                         </div>
                         <div class="researchItem">
                             <div class="researchTitle">
+                                <h4 id="title1"><strong>SafeGen:</strong> A Secure, Disconnected Browser Extension for Password Management Using Shamir Secret Sharing</h4>
+                                <!-- <div id="paper2Link">
+                                    <a href="http://103.82.172.44:8080/xmlui/handle/123456789/1350">Link to research</a>
+                                </div> -->
+                            </div>
+                            <div class="abstract">
+                                <p>SafeGen is a browser extension that enhances password security without centralized storage. Using Shamir Secret Sharing (SSS), it generates and reconstructs passwords from n data points, including the domain name and user-provided security answers, without storing them. It leverages GitHub Gists for decentralized recovery, avoiding single points of failure. SafeGen automates password management across browsers while enforcing strong security standards. Evaluations show it resists brute force, phishing, and dictionary attacks, providing a secure and user-friendly alternative to traditional password managers.</p>
+                            </div>
+                            <div class="sg">
+                                <div id="sg_row1">
+                                    <img id="model_img" src="./img/research/safegen.png"/>
+                                </div>
+                                <!-- <div id="sg_row2">
+                                    <img id="outputs_img" src="./img/research/outputs.PNG"/>
+                                </div>
+                                <div id="sg_row3">
+                                    <img id="error_graph_1" src="./img/research/mse.PNG"/>
+                                    <img id="error_graph_2" src="./img/research/pnsr.PNG"/>
+                                    <img id="error_graph_3" src="./img/research/ssim.PNG"/>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="researchItem">
+                            <div class="researchTitle">
                                 <h4 id="title1"><strong>StructGAN:</strong> Image Restoration Maintaining Structural
                                     Consistency
                                     Using A Two-Step Generative Adversarial Network</h4>
@@ -643,12 +667,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="researchItem">
+                        <!-- <div class="researchItem">
                             <div class="researchTitle">
                                 <h4>`Inner Peace': Exploring the Influence of Lifestyle Applications on Religiosity of
                                     Muslim Community (Submitted to CHI 2023)</h4>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="researchArticles">
                             <div class="cavani_tm_title">
                                 <span id="articlesHeading">Research articles</span>
